--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "suparocket",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,25 +10,25 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@fillout/react": "^1.1.1",
-    "@netlify/plugin-nextjs": "^4.41.3",
-    "@supabase/ssr": "^0.1.0",
-    "@supabase/supabase-js": "^2.39.8",
-    "framer-motion": "^11.0.13",
-    "lucide-react": "^0.358.0",
-    "next": "14.1.3",
-    "nuqs": "^1.17.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@fillout/react": "^1.1.2",
+    "@netlify/plugin-nextjs": "^5.6.0",
+    "@supabase/ssr": "0.4.0",
+    "@supabase/supabase-js": "^2.45.0",
+    "framer-motion": "^11.3.21",
+    "lucide-react": "^0.424.0",
+    "next": "14.2.5",
+    "nuqs": "^1.17.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.1.3",
-    "typescript": "^5.4.2"
+    "@types/react": "^18.3.3",
+    "eslint": "^9.8.0",
+    "eslint-config-next": "14.2.5",
+    "typescript": "^5.5.4"
   },
   "packageManager": "yarn@4.0.2"
 }
